--- a/src/templates/infoscreens/cake.html
+++ b/src/templates/infoscreens/cake.html
@@ -1,7 +1,7 @@
 {% extends './template.html' %}
 {% load static %}
 
-{% block head %}
+{% block infoscreen_script %}
   <script src="{% static 'js/infoscreens/cake.js' %}"></script>
 {% endblock %}
 
@@ -45,7 +45,7 @@
     </div>
     <div class="col-span-3 row-span-2">
       <h2 class="text-9xl font-bold text-center">Estimert ventetid</h2>
-      <p id="avg-wait-time" class="text-7xl text-center">...</p>
+      <p id="avg-wait-time" class="text-7xl text-center" data-avg-wait-time-seconds="{{ queue.avg_wait_time_seconds }}">Under et minutt</p>
     </div>
     <div id="status" class="absolute rotate-12 text-red-600 font-bold text-[24rem] uppercase m-44">{% if not queue.active %}Inaktiv{% endif %}</div>
   </div>
